fix css overflow scroll

--- a/src/assets/css/app.pcss
+++ b/src/assets/css/app.pcss
@@ -388,7 +388,7 @@ table {
   }
   th, td {
     border: 1px solid $borderGrey;
-    overflow-x: scroll;
+    overflow-x: auto;
     /* white-space: nowrap; */
     padding: 1rem;
     /* width: 20%; */
